--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  provider: ^6.1.5
   # 图标库
   cupertino_icons: ^1.0.8
   # 音频播放
   audioplayers: ^6.4.0
   # 日期格式化
-  intl: ^0.20.2
+  intl: ^0.19.0
   #  可以持久化存储在对应的机器上，即使关闭应用重新打开也能获取到
   shared_preferences: ^2.5.3
   #  sqlLite对应的工具，比较边界
@@ -31,6 +34,10 @@ dependencies:
   freezed_annotation: ^3.0.0
   # 进入动画
   flutter_native_splash: ^2.4.6
+  #  状态管理+路由管理
+  get: ^4.7.2
+  # 页面加载
+  flutter_easyloading: ^3.0.5
 
 # 测试依赖
 dev_dependencies:
@@ -69,3 +76,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# 国际化配置
+flutter_intl:
+  enabled: true
+  class_name: S
+  main_locale: zh
+  output_dir: lib/l10n/generated # 模板代码生成路径
+  arb_dir: lib/l10n/arb # .arb 文件存放的路径
